<resources>
    <string name="app_name">Note</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="note">Note</string>


    <string name="refresh">刷新</string>
    <string name="delete">删除选中</string>

    <string name="diary">日记心情</string>
    <string name="todo">备忘笔记</string>
    <string name="encrypt_diary">加密日记</string>
    <string name="setting">我的</string>

    <string name="communicate">更多</string>
    <string name="share">分享</string>
    <string name="upload">上传百度云</string>

    <string name="diary_edit">写点什么吧~</string>
    <string name="todo_edit">记下你要做的事情吧</string>

    <string name="about_des">"        "这是一款简洁易用的记事本软件，主要包含了两个大功能模块，分别是写日记和写备忘，对日记还有加密的功能，
    另外，备忘模块可以记下我们容易忘记的事情。</string>

        <string name="save_phone">欢迎使用该记事本，请输入您的手机号，该手机号只作为您忘记密码时的验证信息，不做其他用途，请务必填写，以免无法正常使用笔记本加密功能</string>


</resources>
