<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/diary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/diary" />
        <item
            android:id="@+id/todo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/todo" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/setting" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/upload"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/upload" />
        </menu>
    </item>

</menu>
